fixing the line spacing in the about section

--- a/static/sass/landing.scss
+++ b/static/sass/landing.scss
@@ -321,6 +321,11 @@ body {
 }
 
 #about {
+	margin-bottom: 2em;
+
+	.description{
+		line-height: 1.9;
+	}
 	img {
 		width: 100%;
 		margin-top: 12px;
